# jane-street-dormant

./: FINDINGS_REPORT.md  README.md  experiment_1_trigger_boundary.py  experiment_4_api_identity_test.py  experiment_4b_api_small_batch.py  experiment_5_retry_critical.py  experiment_6_deep_behavioral.py  experiment_71_activation_heatmap.py  experiment_72_fine_activation.py  experiment_73_m1_token_map.py  experiment_76_combos_and_crossmodel.py  experiment_8_warmup_to_api.py  experiment_9_golden_ratio.py  finetune_backdoor.py  generate_figures.py  pyproject.toml
archive/: FINDINGS_REPORT.md  TECHNICAL_WRITEUP.md
archive/early-research/: FINDINGS_REPORT.md  README.md  RESEARCH_LOG.md  TODO.md  begin_deep_dive.py  check_credits.py  dormant-puzzle.ipynb  identity_probe.py  prompt_style_battery.py  pyproject.toml  trigger_quick.py  trigger_scanner.py  trigger_transfer.py  warmup_compare.py  warmup_golden_probe.py  warmup_local.py  warmup_narrow.py
archive/experiments/: experiment_10_api_golden_ratio.py  experiment_13_melbo.py  (+69 more)
backdoor_repro/: eval_backdoor.py  eval_results.json
experiments/: experiment_70_verify_and_ablate.py  experiment_74_m3_stochasticity.py  experiment_75_dead_zone.py
hf_space/: README.md  app.py
results/: exp4b_api.json  exp6_behavioral.json  exp70_verify_ablate.json  exp71_activation_heatmap.json  exp72_fine_activation.json  exp73_m1_token_map.json  exp74_m3_stochasticity.json  exp75_dead_zone.json  exp76_combos_crossmodel.json  exp7_warmup_deep.json  exp8_warmup_to_api.json  exp9_golden_ratio.json
scripts/: upload_space.py  upload_to_hf.py
(+159 files in other folders)
